=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Changed: Country code for South Sudan changed from SSD to RSS (canajun2eh)
 - Fixed: [ 3571316 ] As of SVN 7075, can't upload any GEDCOMs (canajun2eh)
 - Fixed: [ 3569578 ] PGV not working in PHP 5.4.0 (canajun2eh)
 - Fixed: [ 3532300 ] Can't change ID of existing user (canajun2eh)
 - Fixed: [ 3532299 ] Can't send message to self (canajun2eh)
 - Fixed: Search between PGV sites not working properly (Pasquale Ceres)
 - Fixed: [ 3516462 ] Incorrect call to find_media_record() (canajun2eh)
 - Fixed: [ 3495818 ] Manage Media - repeated Login requests (canajun2eh)
 - Fixed: [ 3474329 ] Sub-menus disappear too quickly (canajun2eh)
 - Fixed: [ 3471553 ] Search Help Text doesn't print search results properly (canajun2eh)
 - Fixed: [ 3422404 ] Late-in-life CHR, BAPM, _BRTM events distort statistics (canajun2eh)
 - Fixed: [ 3409213 ] Error when privacy settings enabled (blaza-pl)
 - Fixed: [ 3417402 ] Function createTempUser() not working (canajun2eh)
 - Added: List all web page links in media object list near top of Personal Details page (George Pauly and canajun2eh)
 - Added: Use media object title to caption image on Personal Details page (canajun2eh)
 - Added: Configurable links to Google Analytics, Piwik Analytics, ClustrMaps Analytics (canajun2eh)
 - Updated: dhtmlXTabbar to version 3.0 build 110707 (canajun2eh)
 - Fixed: Authentication between PGV sites with linked GEDCOMs not working properly (Pasquale Ceres)
 - Fixed: [ 3317813 ] Cannot remove entries from Banned IP list (canajun2eh)
 - Fixed: [ 3316545 ] PclZip fails when php_uname() is disabled by hosting company (canajun2eh)
 - Added: [ 3279989 ] Support for Vietnam clickable maps while editing places (cdeces)