@@ -497,6 +497,9 @@ function valid_date(datefield) {
 		datestr=datearr[0];
 		datephrase=datearr[1];
 	}
+	var srch = "";
+	var mth = 0;
+	var day = 0;
 
 	// Gedcom dates are upper case
 	datestr=datestr.toUpperCase();
@@ -512,27 +515,56 @@ function valid_date(datefield) {
 		datestr = "BET "+months[RegExp.$1*3-3]+" "+RegExp.$2+" AND "+months[RegExp.$1*3-1]+" "+RegExp.$2;
 	}
 
-	// e.g. 17.11.1860, 03/04/2005 or 1999-12-31.  Use locale settings where DMY order is ambiguous.
-	var qsearch = /(.*)(\d+)[^\d](\d+)[^\d](\d+)(.*)/i;
- 	if (qsearch.exec(datestr)) {
- 		var f0=RegExp.$1;
-		var f1=parseInt(RegExp.$2, 10);
-		var f2=parseInt(RegExp.$3, 10);
-		var f3=parseInt(RegExp.$4, 10);
- 		var f4=RegExp.$5;
-		var dmy='DMY';
-		if (typeof(locale_date_format)!='undefined')
-			if (locale_date_format=='MDY' || locale_date_format=='YMD')
-				dmy=locale_date_format;
-		var yyyy=new Date().getFullYear();
-		var yy=yyyy % 100;
-		var cc=yyyy - yy;
-	 	if (dmy=='DMY' && f1<=31 && f2<=12 || f1>13 && f1<=31 && f2<=12 && f3>31)
-			datestr=f0+f1+" "+months[f2-1]+" "+(f3>=100?f3:(f3<=yy?f3+cc:f3+cc-100))+f4;
-		else if (dmy=='MDY' && f1<=12 && f2<=31 || f2>13 && f2<=31 && f1<=12 && f3>31)
-			datestr=f0+f2+" "+months[f1-1]+" "+(f3>=100?f3:(f3<=yy?f3+cc:f3+cc-100))+f4;
-		else if (dmy=='YMD' && f2<=12 && f3<=31 || f3>13 && f3<=31 && f2<=12 && f1>31)
-			datestr=f0+f3+" "+months[f2-1]+" "+(f1>=100?f1:(f1<=yy?f1+cc:f1+cc-100))+f4;
+	// 2 passes, to catch things like "FROM 1860.11.17 TO 1860.11.25"
+	for (var pass=1; pass<=2; pass++) {	
+		// e.g. 1860 NOV 17  (i.e., year and day switched, optional text before and after date)
+		if (datestr.match(/(.*) (\d{4}) (\w+) (\d{1,2}) (.*)/)) {
+		 	day = parseInt(RegExp.$4, 10);
+		 	if (day > 0 && day < 32) {
+			 	datestr = RegExp.$1+" "+RegExp.$4+" "+RegExp.$3+" "+RegExp.$2+" "+RegExp.$5;
+		 	}
+	 	}
+	
+	 	// e.g. 1860.11.17  (1 or 2-digit month and day permitted, optional text before and after date)
+	 	if (datestr.match(/(.*) (\d{4})[^\d](\d{1,2})[^\d](\d{1,2}) (.*)/)) {
+	 	 	day = parseInt(RegExp.$4, 10);
+		 	mth = parseInt(RegExp.$3, 10);
+		 	if ((day > 0 && day < 32) && (mth > 0 && mth < 13)) {
+			 	datestr = RegExp.$1+" "+RegExp.$4+" "+months[mth-1]+" "+RegExp.$2+" "+RegExp.$5;
+		 	}
+		}
+	
+	 	// e.g. 18601117  (2-digit month and day required, optional text before and after date)
+	 	if (datestr.match(/(.*) (\d{4})(\d\d)(\d\d) (.*)/)) {
+	 	 	day = parseInt(RegExp.$4, 10);
+		 	mth = parseInt(RegExp.$3, 10);
+		 	if ((day > 0 && day < 32) && (mth > 0 && mth < 13)) {
+			 	datestr = RegExp.$1+" "+RegExp.$4+" "+months[mth-1]+" "+RegExp.$2+" "+RegExp.$5;
+		 	}
+		}
+	
+		// e.g. 17.11.1860, 03/04/2005 or 1999-12-31.  Use locale settings where DMY order is ambiguous.
+		srch = /(.*) (\d+)[^\d](\d+)[^\d](\d+) (.*)/i;
+	 	if (srch.exec(datestr)) {
+	 		var f0=RegExp.$1;
+			var f1=parseInt(RegExp.$2, 10);
+			var f2=parseInt(RegExp.$3, 10);
+			var f3=parseInt(RegExp.$4, 10);
+	 		var f4=RegExp.$5;
+			var dmy='DMY';
+			if (typeof(locale_date_format)!='undefined')
+				if (locale_date_format=='MDY' || locale_date_format=='YMD')
+					dmy=locale_date_format;
+			var yyyy=new Date().getFullYear();
+			var yy=yyyy % 100;
+			var cc=yyyy - yy;
+		 	if (dmy=='DMY' && f1<=31 && f2<=12 || f1>13 && f1<=31 && f2<=12 && f3>31)
+				datestr=f0+" "+f1+" "+months[f2-1]+" "+(f3>=100?f3:(f3<=yy?f3+cc:f3+cc-100))+" "+f4;
+			else if (dmy=='MDY' && f1<=12 && f2<=31 || f2>13 && f2<=31 && f1<=12 && f3>31)
+				datestr=f0+" "+f2+" "+months[f1-1]+" "+(f3>=100?f3:(f3<=yy?f3+cc:f3+cc-100))+" "+f4;
+			else if (dmy=='YMD' && f2<=12 && f3<=31 || f3>13 && f3<=31 && f2<=12 && f1>31)
+				datestr=f0+" "+f3+" "+months[f2-1]+" "+(f1>=100?f1:(f1<=yy?f1+cc:f1+cc-100))+" "+f4;
+		}
 	}
 
 	// Shortcuts for date ranges
@@ -565,7 +597,7 @@ function valid_date(datefield) {
 		datestr=datestr+" ("+datephrase;
 	}
 	datefield.value=datestr;
-}
+} 
 
 var oldheight = 0;
 var oldwidth = 0;
