@@ -9,6 +9,8 @@
 =====================================================================
 
 Version 4.3.0
+ - Added: Support for date formats like 2012-12-24 and 20121224 when importing GEDCOM (canajun2eh)
+ - Changed: Show up to 5 errors in Date or Place when importing GEDCOM (canajun2eh)
  - Changed: Country code for South Sudan changed from SSD to RSS (canajun2eh)
  - Fixed: [ 3571316 ] As of SVN 7075, can't upload any GEDCOMs (canajun2eh)
  - Fixed: [ 3569578 ] PGV not working in PHP 5.4.0 (canajun2eh)
